# cookiecutter-python-package-template

./: .cz.toml  CHANGELOG.md  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  Makefile  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  manual-release.yml  triggered-release.yml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst  installation.md
{{cookiecutter.project_name}}/tests/: test_data.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
