[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.package_version}}"
description = "{{cookiecutter.short_description}}"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = ["pandas"]
authors = [
   { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
keywords = ["pandas", "data"]
classifiers = [
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.11",
]
license = { file = "LICENCE" }


[project.urls]
repository = "{{cookiecutter.project_url}}"

[dependency-groups]
dev = [
   "bandit",
   "commitizen>=4.10.1",
   "ruff>=0.14.10",
   "cruft>=2.16.0",
   "pytest>=9.0.2",
   "pytest-cov>=7.0.0",
   "prek>=0.2.25",
]
docs = [
   "nbsphinx>=0.9.8",
   "pandoc>=2.4",
   "recommonmark>=0.7.1",
   "sphinx>=9.0.4",
   "sphinx-material>=0.0.36",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.commitizen]
version = "{{cookiecutter.package_version}}"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
   "src/{{cookiecutter.package_name}}/__init__.py",
   "pyproject.toml:version",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov={{cookiecutter.package_name}} --cov-report html"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
select = ["F", "I"]
