[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.0
description = "{{cookiecutter.short_description}}"
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.project_url}}
author = {{cookiecutter.author_name}}
author_email = "{{cookiecutter.author_name}}" <{{cookiecutter.author_email}}>
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    python

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    pandas

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where=src
exclude =
    test*


######################
# Tool configuration #
######################

[tool:pytest]
testpaths = tests
addopts = --cov={{cookiecutter.package_name}} --cov-report html

[coverage:run]
source = {{cookiecutter.package_name}}
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    {{cookiecutter.package_name}}
